--- a/src/styles/elements/_general.scss
+++ b/src/styles/elements/_general.scss
@@ -2,3 +2,7 @@
 .form-control {
   font-size: 1em;
 }
+
+.panel-heading {
+  padding: 20px 0;
+}
